executable jar 생성

--- a/build.gradle
+++ b/build.gradle
@@ -30,3 +30,14 @@ dependencies {
 tasks.named('test') {
 	useJUnitPlatform()
 }
+
+jar {
+	manifest {
+		attributes 'Main-Class': 'com.jayk0918.www.InvitationApplication'
+	}
+	from {
+		configurations.compile.collect {
+			it.isDirectory() ? it : zipTree(it)
+		}
+	}
+}
